<resources>
    <string name="app_name">My Application</string>
    <string name="nav_home">Home</string>
    <string name="nav_fundraising">Fundraising</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_shop">Shop</string>
    <string name="nav_account">Account</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
