<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/home"
        />
    <item
        android:id="@+id/nav_fundraising"
        android:icon="@drawable/fundraising"
        android:title="@string/nav_fundraising" />
    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/form"
        android:title="@string/nav_feedback" />
    <item
        android:id="@+id/nav_shop"
        android:icon="@drawable/shop"
        android:title="@string/nav_shop" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/account"
        android:title="@string/nav_account" />

</menu>